--- a/ERPWeb/Web.config
+++ b/ERPWeb/Web.config
@@ -93,6 +93,11 @@
     <add name="Accounts" connectionString="Data Source=DESKTOP-56RL14C\SQLEXPRESS;Initial Catalog=Accounts;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
     
     <!--Mostofa's PC Connection-->
+    <!--<add name="ControlPanel" connectionString="DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=ControlPanelAgro;Integrated Security =false;Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+
+    <!--<add name="Agriculture" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=Agriculture;Integrated Security =false;Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    
+    
     <!--<add name="Inventory" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=Inventory;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="ControlPanel" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=ControlPanel;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="Production" connectionString="Data Source=DESKTOP-PB29SNV\SQLEXPRESS;Initial Catalog=Production;Integrated Security =true;Connect Timeout=2000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
@@ -105,6 +110,7 @@
     <add name="ControlPanel" connectionString="Data Source=103.108.140.210; Initial Catalog=ControlPanelAgro; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
 
     <add name="Agriculture" connectionString="Data Source=103.108.140.210; Initial Catalog=Agriculture; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    
     <!--<add name="Inventory" connectionString="Data Source=103.108.140.210; Initial Catalog=Inventory; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="Production" connectionString="Data Source=103.108.140.210; Initial Catalog=Production; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="FrontDesk" connectionString="Data Source=103.108.140.210; Initial Catalog=FrontDesk; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
