--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3280,6 +3280,7 @@
     <Content Include="Views\AgroConfiguration\_GetAgroSalesReturnAdjust.cshtml" />
     <Content Include="Views\AgroConfiguration\ProductCommision.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetStockProductFinishGoodList.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetSalesReturnAdjustList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
