--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Agriculture\DomainModels\AreaUser.cs" />
     <Compile Include="Agriculture\DomainModels\CommisionOnProduct.cs" />
     <Compile Include="Agriculture\DomainModels\CommisionOnProductHistory.cs" />
+    <Compile Include="Agriculture\DomainModels\CommisionOnProductSalesDetails.cs" />
+    <Compile Include="Agriculture\DomainModels\CommissionOnProductOnSales.cs" />
     <Compile Include="Agriculture\DomainModels\DistributionUser.cs" />
     <Compile Include="Agriculture\DomainModels\DivisionInfo.cs" />
     <Compile Include="Agriculture\DomainModels\DivisionUser.cs" />
@@ -119,6 +121,8 @@
     <Compile Include="Agriculture\DTOModels\AreaUserDTO.cs" />
     <Compile Include="Agriculture\DTOModels\CommisionOnProductDTO.cs" />
     <Compile Include="Agriculture\DTOModels\CommisionOnProductHistoryDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\CommisionOnProductSalesDetailsDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\CommissionOnProductOnSalesDTO.cs" />
     <Compile Include="Agriculture\DTOModels\DistributionUserDTO.cs" />
     <Compile Include="Agriculture\DTOModels\DistributionUserViewModel.cs" />
     <Compile Include="Agriculture\DTOModels\DivisionInfoDTO.cs" />
@@ -161,7 +165,9 @@
     <Compile Include="Agriculture\ViewModels\AreaSetupViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\AreaUserViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\CommisionOnProductHistoryViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\CommisionOnProductSalesDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\CommisionOnProductViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\CommissionOnProductOnSalesViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\DivisionInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\DivisionUserViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodProductionDetailViewModel.cs" />
