--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -122,6 +122,10 @@
     <Compile Include="AgricultureContextMigrations\202211070800217_Agri_startDateAndEndDate.Designer.cs">
       <DependentUpon>202211070800217_Agri_startDateAndEndDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211080508279_Agriculture_commissionSalesInfoandDetails.cs" />
+    <Compile Include="AgricultureContextMigrations\202211080508279_Agriculture_commissionSalesInfoandDetails.Designer.cs">
+      <DependentUpon>202211080508279_Agriculture_commissionSalesInfoandDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -197,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211070800217_Agri_startDateAndEndDate.resx">
       <DependentUpon>202211070800217_Agri_startDateAndEndDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211080508279_Agriculture_commissionSalesInfoandDetails.resx">
+      <DependentUpon>202211080508279_Agriculture_commissionSalesInfoandDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
