--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3283,6 +3283,7 @@
     <Content Include="Views\AgroConfiguration\_GetStockProductFinishGoodList.cshtml" />
     <Content Include="Views\AgroConfiguration\SalesCommission.cshtml" />
     <Content Include="Views\AgroConfiguration\_SalesCommission.cshtml" />
+    <Content Include="Views\AgroConfiguration\_SalesCommissionDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
