--- a/ERPWeb/Web.config
+++ b/ERPWeb/Web.config
@@ -136,5 +136,6 @@
   -->
   <system.web>
     <!--<compilation targetFramework="4.8" debug="true"/>-->
+    <!--<compilation targetFramework="4.6.1" debug="true"/>-->
   </system.web>
 </configuration>
