--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -155,6 +155,10 @@
     <Compile Include="AgricultureContextMigrations\202211160701095_issueaddfield.Designer.cs">
       <DependentUpon>202211160701095_issueaddfield.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211160916429_Agriculture_detailsIdsales.cs" />
+    <Compile Include="AgricultureContextMigrations\202211160916429_Agriculture_detailsIdsales.Designer.cs">
+      <DependentUpon>202211160916429_Agriculture_detailsIdsales.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -254,6 +258,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211160701095_issueaddfield.resx">
       <DependentUpon>202211160701095_issueaddfield.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211160916429_Agriculture_detailsIdsales.resx">
+      <DependentUpon>202211160916429_Agriculture_detailsIdsales.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
